# CS5421_LLM_Optimization_of_SQL_Query

./: .gitignore  README.md  pyproject.toml  requirements.txt  use_of_tcp_ds.md
cli/: experiment_cli.py  optimization_pipeline_cli.py  validator_cli.py
config/: __init__.py  settings.py
db/: __init__.py  adapter.py  postgres_adapter.py
demo/: quickstart_layer3.py  quickstart_layer3_result.txt  sql_tasks.py
docs/: conclusion_section.tex  experimental_setup.md  layer1_workload_preparation.md  layer2_prompt_builder.md  layer3_candidate_generation.md  layer4_candidate_normalization.md  layer5_validation_gate.md  layer6_benchmark.md  layer7_ranking.md  layer8_analysis.md  layers_index.md  llm_arch_proposal.md  methodology_section.tex  performance_section.tex  postgres_macos_homebrew.md  report_methodology_outline.md  validation_flow.md  validator_design.md
execution/: __init__.py  query_executor.py
experiments/: __init__.py  benchmark.py  models.py  prompt_builder.py  runner.py  validation.py
layer1/: __init__.py  workload_preparation.py
layer2/: __init__.py  prompt_builder.py
layer3/: __init__.py  ark_client.py  candidate_generation.py  client.py  generation_layer.py  models.py  response_parse.py
layer4/: __init__.py  candidate_normalizer.py
layer5/: __init__.py  validation_gate.py
layer6/: __init__.py  benchmark.py
layer7/: __init__.py  ranking.py
layer8/: __init__.py  analysis.py
models/: __init__.py  results.py
pipeline/: __init__.py  layers.py  models.py  sql_optimization_pipeline.py
reports/: layer3_report.md
runner/: sample.sh
scripts/: analyze_experiment_results.py  (+1 more)
(+323 files in other folders)
