[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-sql-validator"
version = "0.1.0"
description = "Semantic result-set validator for LLM-generated SQL optimizations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "psycopg[binary]>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
]

[project.scripts]
llm-sql-validator = "cli.validator_cli:main"
llm-sql-pipeline = "cli.optimization_pipeline_cli:main"

[tool.setuptools.packages.find]
include = ["cli", "config", "db", "execution", "models", "utils", "validator", "pipeline", "layer1", "layer2", "layer3", "layer4", "layer5", "layer6", "layer7", "layer8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
